GRAXConnect/main/default/objects/HardingPoint__c/HardingPoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GRA by Harding Point Settings</description>
    <label>GRAX Settings</label>
</CustomObject>