GRAXConnect/main/default/objects/HardingPoint__c/fields/graphdburl__c.field-meta.xml
<CustomField>
    <fullName>graphdburl__c</fullName>
    <description>GRAX Settings : Heroku Setting GRAPHENEDB_URL</description>
    <inlineHelpText>GRAX Settings : Heroku Setting GRAPHENEDB_URL</inlineHelpText>
    <label>graphdburl</label>
    <type>Url</type>
</CustomField>